--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: Claims
 version: '${project.version}'
 main: me.stephenminer.claims.Claims
 api-version: 1.19
+load: POSTWORLD
 commands:
   giveWand:
   claimShovel:
